--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
     </header>
 
     <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-center">
+                    <div class="box">
+                        <h1>To-Do</h1>
+                        <input type="text">
+                        <div class="btn">add</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 d-flex justify-content-center">
+                <div class="minibox">
 
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
 
     <footer>
