--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="col-md-12 d-flex justify-content-center">
                     <div class="box">
                         <h1>To-Do</h1>
-                        <input type="text">
+                        <input type="text" value="Please write">
                         <div class="btn">add</div>
                     </div>
                 </div>
